# looplet

./: CHANGELOG.md  HOOK_GUIDE.md  PROVENANCE_GUIDE.md  README.md  ROADMAP.md  THIRD_PARTY_USERS.md  _seen.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml
demo/: looplet_new.cast  looplet_new_demo.sh
docs/: demo-script.md  discussions-seed.md  evals.md  good-first-issues.md  hooks.md  index.md  quickstart.md  recipes.md  skills.md  tutorial.md  workspace.md
examples/agent_factory.workspace/prompts/: system.md
examples/coder/: agent.py
examples/coder.workspace/: coder_lib_tools.py  coder_lib_wiring.py  setup.py  workspace.json
examples/dep_doctor.workspace/: config.yaml
examples/git_detective.workspace/: config.yaml
examples/hello.workspace/: workspace.json
examples/threat_intel/: agent.py
examples/threat_intel.workspace/: config.yaml
src/looplet/: __init__.py  __main__.py  async_loop.py  backends.py  blueprints.py  budget.py  bundles.py  compact.py  context_budget.py  conversation.py  done_steps.py  evals.py  events.py  limits.py  loop.py  memory.py  parse.py  permissions.py  resilient.py  router.py  scaffold.py  scaffolding.py  stagnation.py  streaming.py  subagent.py  telemetry.py  testing.py  tools.py  types.py  validation.py  workspace.py
src/looplet/builtin_tools/: __init__.py  subagent.py  (+1 more)
src/openharness/: __init__.py  __main__.py  approval.py  budget.py  cache.py  checkpoint.py  context.py  evals.py  loop.py  parse.py  permissions.py  presets.py  prompts.py  provenance.py  router.py  testing.py  tools.py  types.py
tests/: conftest.py  test_approval_hook_smoke.py  test_async_loop_smoke.py  test_backends.py  test_budget_smoke.py  test_cache_smoke.py  test_cartridge_round_trip_smoke.py  test_check_done_payload.py  test_cli_new_smoke.py  test_coder_reliability_smoke.py  test_coder_tool_improvements_smoke.py  test_compaction_boundary.py  test_context_budget_smoke.py  test_conversation.py  test_done_steps.py  test_flags.py  test_friction12_fixes_smoke.py  test_friction15_fixes_smoke.py  test_friction16_fixes_smoke.py  test_friction4_fixes_smoke.py  test_friction6_fixes_smoke.py  test_harness_snapshot.py  test_hook_decision_event.py  test_hook_decision_smoke.py  test_limits.py  test_package_smoke.py  test_parse.py  test_permission_hook_smoke.py  test_provenance_smoke.py  test_replay_and_cli_smoke.py  test_resilient.py  test_scaffold_and_subagent_smoke.py  test_session.py  test_skill_bundle_round_trip_smoke.py  test_stagnation.py  test_subagent_events_smoke.py  test_testing_smoke.py  test_tool_error_taxonomy.py  test_tool_reliability_smoke.py  test_tool_validation_error_smoke.py  (+3 more)
(+51 files in other folders)
