[project]
name = "openharness"
version = "0.1.6"
description = "The tool-calling loop for LLM agents — iterator-first, protocol-hooked, one dependency."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "openharness contributors" },
]
keywords = [
    "llm",
    "agent",
    "tool-calling",
    "anthropic",
    "openai",
    "agent-framework",
    "harness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.30"]
all = ["anthropic>=0.34", "openai>=1.30"]

[project.urls]
Homepage = "https://github.com/hsaghir/openharness"
Repository = "https://github.com/hsaghir/openharness"
Issues = "https://github.com/hsaghir/openharness/issues"
Changelog = "https://github.com/hsaghir/openharness/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openharness"]

[tool.hatch.build.targets.sdist]
include = [
    "src/openharness",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "HOOK_GUIDE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30"
asyncio_mode = "auto"
markers = [
    "smoke: fast smoke tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
]
ignore = [
    "E501",  # line length handled by formatter
    "E741",  # ambiguous variable names (l, I, O) — acceptable in math/LLM contexts
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811", "F841", "E731"]  # relax common test idioms
